points overtop lines in the cluster distance diagrams

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -359,12 +359,7 @@ These distances are denoted by lines in Figure \@ref(fig:10-toy-example-clus1-di
 (ref:10-toy-example-clus1-dists) Cluster 1 from the `penguins_standardized` data set example. Observations are in blue, with the cluster center highlighted in red. The distances from the observations to the cluster center are represented as black lines.
 
 ```{r 10-toy-example-clus1-dists, echo = FALSE, warning = FALSE, fig.height = 3.25, fig.width = 3.5, fig.align = "center", fig.cap = "(ref:10-toy-example-clus1-dists)"}
-base <- ggplot(clus1) +
-  geom_point(aes(y = bill_length_standardized, 
-                 x = flipper_length_standardized),
-             col = "dodgerblue3") +
-  labs(x = "Flipper Length (standardized)", y = "Bill Length (standardized)") +
-  theme(legend.position = "none") 
+base <- ggplot(clus1) 
 
 mn <- clus1 |> 
   summarize(flipper_length_standardized = mean(flipper_length_standardized), 
@@ -382,6 +377,14 @@ base <- base +
                  x = mean(flipper_length_standardized)), 
              color = "#F8766D", 
              size = 5)
+
+base <- base +
+  geom_point(aes(y = bill_length_standardized, 
+                 x = flipper_length_standardized),
+             col = "dodgerblue3") +
+  labs(x = "Flipper Length (standardized)", y = "Bill Length (standardized)") +
+  theme(legend.position = "none") 
+
 base
 ```
 
@@ -399,16 +402,8 @@ Figure \@ref(fig:10-toy-example-all-clus-dists).
 (ref:10-toy-example-all-clus-dists) All clusters from the `penguins_standardized` data set example. Observations are in orange, blue, and yellow with the cluster center highlighted in red. The distances from the observations to each of the respective cluster centers are represented as black lines.
 
 ```{r 10-toy-example-all-clus-dists, echo = FALSE, warning = FALSE, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.cap = "(ref:10-toy-example-all-clus-dists)"}
-all_clusters_base <- penguins_clustered |>
-  ggplot(aes(y = bill_length_standardized,
-             x = flipper_length_standardized,
-             color = cluster)) +
-  geom_point() +
-  xlab("Flipper Length (standardized)") +
-  ylab("Bill Length (standardized)") + 
-  scale_color_manual(values= c("darkorange3", 
-                               "dodgerblue3", 
-                               "goldenrod1"))
+all_clusters_base <- ggplot(penguins_clustered)
+
 cluster_centers <- tibble(x = c(0, 0, 0),
                           y = c(0, 0, 0))
 
@@ -434,6 +429,16 @@ for (cluster_number in seq_along(1:3)) {
   cluster_centers[cluster_number, 1] <- mean(clus$flipper_length_standardized)
   cluster_centers[cluster_number, 2] <- mean(clus$bill_length_standardized)
 }
+
+all_clusters_base <- all_clusters_base +
+  geom_point(aes(y = bill_length_standardized,
+             x = flipper_length_standardized,
+             color = cluster)) +
+  xlab("Flipper Length (standardized)") +
+  ylab("Bill Length (standardized)") + 
+  scale_color_manual(values= c("darkorange3", 
+                               "dodgerblue3", 
+                               "goldenrod1"))
 
 all_clusters_base <- all_clusters_base + 
   geom_point(aes(y = cluster_centers$y[1], 
