fix order of warning/df in reading

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -209,20 +209,18 @@ library(tidyverse)
 ```
 
 Next we use `read_csv` to load the data into R, and in that call we specify the
-relative path to the file.
+relative path to the file. Note that it is normal and expected that \index{warning} a message is
+printed out after using the `read_csv` and related functions. This message lets you know the data types
+of each of the columns that R inferred while reading the data into R.  In the
+future when we use this and related functions to load data in this book, we will
+silence these messages to help with the readability of the book.
+
 
 ```{r load-data, message = TRUE}
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
 \newpage
-
-> **Note:** It is also normal and expected that \index{warning} a message is
-> printed out after using
-> the `read_csv` and related functions. This message lets you know the data types
-> of each of the columns that R inferred while reading the data into R.  In the
-> future when we use this and related functions to load data in this book, we will
-> silence these messages to help with the readability of the book.
 
 Finally, to view the first 10 rows of the data frame,
 we must call it:
@@ -260,17 +258,12 @@ Non-Official & Non-Aboriginal languages,Amharic,22465,12785,200,33670
 With this extra information being present at the top of the file, using
 `read_csv` as we did previously does not allow us to correctly load the data
 into R. In the case of this file we end up only reading in one column of the
-data set:
+data set. In contrast to the normal and expected messages above, this time R 
+prints out a warning for us indicating that there might be a problem with how
+our data is being read in. \index{warning}
 
 ```{r}
 canlang_data <- read_csv("data/can_lang_meta-data.csv")
-```
-
-> **Note:** In contrast to the normal and expected messages above, this time R 
-> printed out a warning for us indicating that there might be a problem with how
-> our data is being read in. \index{warning}
-
-```{r}
 canlang_data
 ```
 
