remove extra stuff about confusion matrix (we now have a better intro to that earlier in the chapter)

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -514,10 +514,8 @@ In the metrics data frame, we filtered the `.metric` column since we are
 interested in the `accuracy` row. Other entries involve other metrics that
 are beyond the scope of this book. Looking at the value of the `.estimate` variable
  shows that the estimated accuracy of the classifier on the test data 
-was `r round(100*cancer_acc_1$.estimate, 0)`%.
-
-We can also look at the *confusion matrix* for the classifier, which shows
-the table of predicted labels and correct labels, using the `conf_mat` function:
+was `r round(100*cancer_acc_1$.estimate, 0)`%. We can also look at the *confusion matrix* for
+the classifier using the `conf_mat` function.
 
 ```{r 06-confusionmat}
 confusion <- cancer_test_predictions |>
