fixing inconsistent train/test split in reg1,2

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -305,6 +305,11 @@ that we used earlier in the chapter (Figure \@ref(fig:07-small-eda-regr)).
 \index{training data}
 \index{test data}
 
+```{r 07-sacramento-seed-before-train-test-split, echo = FALSE, message = FALSE, warning = FALSE}
+# hidden seed -- make sure this is the same as what appears in reg2 right before train/test split
+set.seed(10)
+```
+
 ```{r 07-test-train-split}
 sacramento_split <- initial_split(sacramento, prop = 0.75, strata = price)
 sacramento_train <- training(sacramento_split)
