--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -221,11 +221,11 @@ can come back to after we choose our final model. Let's take care of that now.
 library(tidyverse)
 library(tidymodels)
 
-set.seed(1234)
+set.seed(10)
 
 sacramento <- read_csv("data/sacramento.csv")
 
-sacramento_split <- initial_split(sacramento, prop = 0.6, strata = price)
+sacramento_split <- initial_split(sacramento, prop = 0.75, strata = price)
 sacramento_train <- training(sacramento_split)
 sacramento_test <- testing(sacramento_split)
 ```
@@ -349,7 +349,8 @@ obtained from the same problem, shown in Figure \@ref(fig:08-compareRegression).
 
 ```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4.75, fig.width = 10, fig.cap = "Comparison of simple linear regression and KNN regression."}
 set.seed(1234)
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) |>
+# neighbors = 28 from regression1 chapter
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 28) |>
   set_engine("kknn") |>
   set_mode("regression")
 
