--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -27,6 +27,7 @@ By the end of the chapter, readers will be able to do the following:
 - Read tabular data with `read_csv`.
 - Create new variables and objects in R using the assignment symbol.
 - Create and organize subsets of tabular data using `filter`, `select`, `arrange`, and `slice`.
+- Add and modify columns in tabular data using `mutate`.
 - Visualize data with a `ggplot` bar plot.
 - Use `?` to access help and documentation tools in R.
 
