--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -42,31 +42,31 @@ tied well before going for a run so that you don’t trip later on!
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to do the following:
 
-- Define the following:
+- Define the types of path and use them to locate files:
     - absolute file path
     - relative file path
-    - **U**niform **R**esource **L**ocator (URL)
-- Read data into R using a relative path and a URL.
-- Compare and contrast the following functions:
+    - Uniform Resource Locator (URL)
+- Read data into R from various types of path using:
     - `read_csv` 
     - `read_tsv`
     - `read_csv2`
     - `read_delim`
     - `read_excel`
-- Match the following `tidyverse` `read_*` function arguments to their descriptions:
-    - `file` 
+- Compare and contrast the `read_*` functions.
+- Describe when to use the following `read_*` function arguments:
+    - `skip`
     - `delim`
     - `col_names`
-    - `skip`
 - Choose the appropriate `tidyverse` `read_*` function and function arguments to load a given plain text tabular data set into R.
 - Use the `rename` function to rename columns in a data frame.
-- Use `readxl` package's `read_excel` function and arguments to load a sheet from an excel file into R.
-- Connect to a database using the `DBI` package's `dbConnect` function.
-- List the tables in a database using the `DBI` package's `dbListTables` function.
-- Create a reference to a database table that is queriable using the `tbl` from the `dbplyr` package.
-- Retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package.
+- Use `read_excel` function and arguments to load a sheet from an excel file into R.
+- Work with databases using functions from `dbplyr` and `DBI`:
+    - Connect to a database with `dbConnect`.
+    - List tables in the database with `dbListTables`.
+    - Create a reference to a database table with `tbl`.
+    - Bring data from a database into R using `collect`.
 - Use `write_csv` to save a data frame to a `.csv` file.
-- (*Optional*) Obtain data using **a**pplication **p**rogramming **i**nterfaces (APIs) and web scraping.
+- (*Optional*) Obtain data from the web using scraping and application programming interfaces (APIs):
     - Read HTML source code from a URL using the `rvest` package.
     - Read data from the NASA "Astronomy Picture of the Day" API using the `httr2` package.
     - Compare downloading tabular data from a plain text file (e.g., `.csv`), accessing data from an API, and scraping the HTML source code from a website.
